<resources>
    <string name="app_name">Legado</string>
    <string name="app_name_a">Legado·A</string>
    <string name="receiving_shared_label">Legado·search</string>
    <string name="tip_perm_request_storage">Legado needs storage access to find and read books. please go "App Settings" to allow "Storage permission".</string>
    <string name="menu_backup">Home</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_import_old">Import Legado data</string>
    <string name="webdav_cache_backup">Offline cache book backup</string>
    <string name="webdav_cache_backup_s">Export to local and back up to the exports directory under the legado folder</string>
    <string name="backup_path">Backup to</string>
    <string name="select_backup_path">Please select a backup path.</string>
    <string name="menu_import_old_version">Import legacy data</string>
    <string name="menu_import_github">Import github data</string>
    <string name="menu_replace_rule">Replacement</string>
    <string name="menu_send">Send</string>
    <string name="dialog_title">Prompt</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_setting">Go to Settings</string>
    <string name="tip_cannot_jump_setting_page">Cannot jump to Settings.</string>
    <string name="manual_input">Manual Input</string>
    <string name="enter_directory_path">Enter directory path</string>
    <string name="invalid_directory">Invalid directory path</string>
    <string name="empty_directory_input">Directory path cannot be empty</string>
    <string name="dynamic_click_retry">Retry</string>
    <string name="dynamic_loading">Loading</string>
    <string name="draw">Warning</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_select_group">Delete Select Group</string>
    <string name="delete_all">Delete all</string>
    <string name="custom_export_section">Custom export chapter of epub</string>
    <string name="replace">Replace</string>
    <string name="replace_purify">Replacement</string>
    <string name="replace_purify_desc">Configure replacement rules</string>
    <string name="not_available">Not available now</string>
    <string name="enable">Enable</string>
    <string name="replace_purify_search">Search Replacement</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="in_favorites">in Favorites</string>
    <string name="out_favorites">Not in Favorites</string>
    <string name="rss">RSS feeds</string>
    <string name="all">All</string>
    <string name="recent_reading">Recent reading</string>
    <string name="last_read">Last reading</string>
    <string name="update_log">What\'s new</string>
    <string name="bookshelf_empty">The bookshelf is still empty. Search for books or add them from discovery!</string>
    <string name="action_search">Search</string>
    <string name="action_download">Download</string>
    <string name="layout_list">List</string>
    <string name="layout_grid3">Grid-3</string>
    <string name="layout_grid4">Grid-4</string>
    <string name="layout_grid5">Grid-5</string>
    <string name="layout_grid6">Grid-6</string>
    <string name="bookshelf_layout">Layout</string>
    <string name="view">View</string>
    <string name="book_library">Library</string>
    <string name="book_local">Import books</string>
    <string name="book_source">Book sources</string>
    <string name="book_source_manage">Sources management</string>
    <string name="book_source_manage_desc">Create/Import/Edit/Manage Book sources</string>
    <string name="setting">Settings</string>
    <string name="theme_setting">Theme settings</string>
    <string name="theme_setting_s">Some settings related to interface or color</string>
    <string name="other_setting">Other settings</string>
    <string name="other_setting_s">Some function-related settings</string>
    <string name="about">About</string>
    <string name="donate">Donations</string>
    <string name="exit">Exit</string>
    <string name="exit_no_save">It has not been saved. Do you want to continue editing?</string>
    <string name="read_style">Book styles</string>
    <string name="version">Version</string>
    <string name="local">Local</string>
    <string name="search">Search</string>
    <string name="origin_format">Origin: %s</string>
    <string name="read_dur_progress">Origin: %s</string>
    <string name="book_name">Title</string>
    <string name="lasted_show">Latest: %s</string>
    <string name="check_add_bookshelf">Would you like to add %s to your Bookshelf?</string>
    <string name="import_books_count">%s text file(s) in total</string>
    <string name="is_loading">Loading…</string>
    <string name="retry">Retry</string>
    <string name="web_service">Web service</string>
    <string name="web_service_desc">Web edit source and read book</string>
    <string name="web_edit_source">Edit book sources on the web</string>
    <string name="offline_cache">Offline cache</string>
    <string name="offline_cache_t">Offline cache</string>
    <string name="offline_cache_s">cache the selected chapter(s) to Storage</string>
    <string name="change_origin">Change Origin</string>
    <string name="about_description">
        \u3000\u3000 This is an open source reading software newly developed by Kotlin, welcome to join us.
    </string>
    <string name="app_share_description">
        Legado (YueDu 3.0) download link：\n https://github.com/gedoor/legado/releases
    </string>
    <string name="version_name">Version %s</string>
    <string name="pt_background_verification">Background-verification</string>
    <string name="ps_background_verification">you can operate freely when verifying the book source</string>
    <string name="pt_auto_refresh">Auto-refresh</string>
    <string name="ps_auto_refresh">Update books automatically when opening the software</string>
    <string name="pt_auto_download">Auto-download</string>
    <string name="ps_auto_download">Download the latest chapters automatically  when updating books</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="web_dav_set">WebDav settings</string>
    <string name="web_dav_set_import_old">WebDav settings/Import legacy data</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_permission">Backup needs storage permission</string>
    <string name="restore_permission">Restore needs storage permission</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="backup_confirmation">Backup confirmation</string>
    <string name="backup_message">The new backup files will replace the original.\n Backup folder: YueDu</string>
    <string name="restore_confirmation">Restore confirmation</string>
    <string name="restore_message">Restoring the bookshelf data will overwrite the current Bookshelf.</string>
    <string name="backup_success">Backup succeed</string>
    <string name="backup_fail">Backup failed\n%s</string>
    <string name="on_restore">Restoring</string>
    <string name="restore_success">Restore succeed</string>
    <string name="restore_fail">Backup failed</string>
    <string name="screen_direction">Screen orientation</string>
    <string name="screen_sensor">Auto(sensor)</string>
    <string name="screen_landscape">Landscape</string>
    <string name="screen_portrait">Portrait</string>
    <string name="screen_unspecified">Follow system</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="all_chapter_num">%d chapters</string>
    <string name="interface_setting">Interface</string>
    <string name="brightness">Brightness</string>
    <string name="chapter_list">Chapters</string>
    <string name="next_chapter">Next</string>
    <string name="previous_chapter">Prior</string>
    <string name="pt_hide_status_bar">Hide status bar</string>
    <string name="ps_hide_status_bar">Hide system navigation bar when reading</string>
    <string name="read_aloud">Speech</string>
    <string name="read_aloud_t">Speaking</string>
    <string name="read_aloud_s">Click to open the Reading</string>
    <string name="audio_play">Play</string>
    <string name="audio_play_t">Playing</string>
    <string name="audio_play_s">Click to open the Playing</string>
    <string name="audio_pause">Pause</string>
    <string name="web_dav_pw">WebDav password</string>
    <string name="web_dav_pw_s">Input you WebDav authorized password</string>
    <string name="web_dav_url_s">Input you server address</string>
    <string name="web_dav_url">WebDav server address</string>
    <string name="web_dav_account">WebDav account</string>
    <string name="web_dav_account_s">Input your WebDav account</string>
    <string name="reader_server_set">阅读服务器设置</string>
    <string name="reader_server_url">服务器地址</string>
    <string name="reader_server_url_s">请输入Reader服务器地址，如 http://192.168.1.100:8080</string>
    <string name="reader_server_username">用户名</string>
    <string name="reader_server_username_s">请输入Reader服务器用户名</string>
    <string name="reader_server_password">密码</string>
    <string name="reader_server_password_s">请输入Reader服务器密码</string>
    <string name="reader_server_test">测试连接</string>
    <string name="reader_server_test_s">测试与服务器的连接是否正常</string>
    <string name="reader_server_sync_book_source">同步书源</string>
    <string name="reader_server_sync_book_source_s">与服务器双向同步书源数据</string>
    <string name="reader_server_sync_bookshelf">同步书架</string>
    <string name="reader_server_sync_bookshelf_s">与服务器双向同步书架数据</string>
    <string name="reader_server_sync_book_group">同步分组</string>
    <string name="reader_server_sync_book_group_s">与服务器双向同步书籍分组</string>
    <string name="reader_server_sync_progress">同步阅读进度</string>
    <string name="reader_server_sync_progress_s">与服务器同步阅读进度</string>
    <string name="reader_server_sync_rss_source">同步订阅源</string>
    <string name="reader_server_sync_rss_source_s">与服务器双向同步RSS订阅源</string>
    <string name="reader_server_auto_sync">自动同步</string>
    <string name="reader_server_auto_sync_s">刷新书架时自动与服务器同步</string>
    <string name="reader_server_sync_now">立即同步</string>
    <string name="reader_server_sync_now_s">立即与服务器进行全量数据同步</string>
    <string name="backup_summary">Backup the local and WebDav simultaneously</string>
    <string name="restore_summary">Restore from WebDAV first, Restore form the local backup on long click</string>
    <string name="import_old_summary">Select a legacy backup folder</string>
    <string name="restore_ignore">Bypass list</string>
    <string name="restore_ignore_summary">Ignore some contents while restoring</string>
    <string name="sync_book_progress_t">Synchronous reading progress</string>
    <string name="sync_book_progress_s">Synchronize reading progress when entering / exiting the reading interface</string>
    <string name="sync_book_progress_plus_t">Sync Enhancement</string>
    <string name="sync_book_progress_plus_s">Sync cloud progress when re-entering the page (screen off, returning from background, etc.) or when the network becomes available. You will be prompted before syncing new progress.</string>
    <string name="sub_dir">Sub dir</string>
    <string name="webdav_device_name">Device name</string>
    <string name="only_latest_backup_t">Keep only the latest backup</string>
    <string name="only_latest_backup_s">Local backup keeps only the latest backup file</string>
    <string name="auto_check_new_backup_t">自动检查新备份</string>
    <string name="auto_check_new_backup_s">打开软件时检查是否有新备份，有新备份时提示是否更新</string>
    <string name="app_lock">App Lock</string>
    <string name="use_biometric">Use Biometric</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="wrong_pin">Wrong PIN</string>
</resources>